[LFC][IFC] Fix fast/text/simple-line-with-br.html https://bugs.webkit.org/show_bug.cgi?id=205207 <rdar://problem/57913504>

Reviewed by Antti Koivisto.

Apply https://www.w3.org/TR/css-text-3/#white-space-property's matrix to end-of-the-line whitespace.
(Keep white-space: mormal no-wrap pre-wrap and pre-line content)

* layout/inlineformatting/InlineLineBreaker.cpp:
(WebCore::Layout::shouldKeepEndOfLineWhitespace):
(WebCore::Layout::LineBreaker::breakingContextForInlineContent):
(WebCore::Layout::LineBreaker::Content::isVisuallyEmptyWhitespaceContentOnly const):
(WebCore::Layout::isTrailingWhitespaceWithPreWrap): Deleted.
* layout/inlineformatting/InlineLineBreaker.h:
* layout/inlineformatting/InlineLineBuilder.cpp:
(WebCore::Layout::LineBuilder::InlineItemRun::isTrimmableWhitespace const):
* layout/inlineformatting/LineLayoutContext.cpp:
(WebCore::Layout::LineLayoutContext::placeInlineItem):

Canonical link: https://commits.webkit.org/218404@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253480 268f45cc-cd09-0410-ab3c-d52691b4dbfc